--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>練習用サイト_櫻坂46</title>
+  <title>ファンサイト_櫻坂46</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -27,51 +27,51 @@
 
   <hr color="pink">
   <p class="music">
-    MUSIC
+    Music Video
   </p>
   <ul>
   <li class="image-music">
-      <a href="https://www.youtube.com/watch?v=qP52sh7PzYA" target="_blank"><img src="UDAGAWA.jpg"></a>
+      <a href="https://www.youtube.com/watch?v=qP52sh7PzYA" target="_blank"><img src="images/UDAGAWA.jpg"></a>
       <p>11th.Single<br>UDAGWA GENERATION</p>
   </li>
   <li class="image-music">
-     <a href="https://www.youtube.com/watch?v=07JLD3d1-W0" target="_blank"><img src="I_want.jpg"></a>
+     <a href="https://www.youtube.com/watch?v=07JLD3d1-W0" target="_blank"><img src="images/I_want.jpg"></a>
      <p>10th.Single<br>I want tomorrow to come</p>
   </li>
   <li class="image-music">
-     <a href="https://www.youtube.com/watch?v=Rs-Y9MtHsoo" target="_blank"><img src="zigouzitoku.jpg"></a>
+     <a href="https://www.youtube.com/watch?v=Rs-Y9MtHsoo" target="_blank"><img src="images/zigouzitoku.jpg"></a>
      <p>9th.Single<br>自業自得</p>
   </li>
   <li class="image-music">
-     <a href="https://www.youtube.com/watch?v=7xx66mR_HeE" target="_blank"><img src="ikumodo.jpg"></a>
+     <a href="https://www.youtube.com/watch?v=7xx66mR_HeE" target="_blank"><img src="images/ikumodo.jpg"></a>
      <p>8th.Single<br>何歳の頃に戻りたいのか</p>
   </li>
   <li class="image-music">
-     <a href="https://www.youtube.com/watch?v=x_BjvhMW9TE" target="_blank"><img src="syonin.jpg"></a>
+     <a href="https://www.youtube.com/watch?v=x_BjvhMW9TE" target="_blank"><img src="images/syonin.jpg"></a>
      <p>7th.Single<br>承認欲求</p>
   </li>
   <li class="image-music">
-     <a href="https://www.youtube.com/watch?v=YJRFD1AdaUE" target="_blank"><img src="startover.jpg"></a>
+     <a href="https://www.youtube.com/watch?v=YJRFD1AdaUE" target="_blank"><img src="images/startover.jpg"></a>
      <p>6th.Single<br>Start Over!</p>
   </li>
   <li class="image-music">
-     <a href="https://www.youtube.com/watch?v=zKLgrxHDgls" target="_blank"><img src="sakuraduki.jpg"></a>
+     <a href="https://www.youtube.com/watch?v=zKLgrxHDgls" target="_blank"><img src="images/sakuraduki.jpg"></a>
      <p>5th.Single<br>桜月</p>
   </li>
   <li class="image-music">
-     <a href="https://www.youtube.com/watch?v=3boaeE3dwMs" target="_blank"><img src="samidare.jpg"></a>
+     <a href="https://www.youtube.com/watch?v=3boaeE3dwMs" target="_blank"><img src="images/samidare.jpg"></a>
      <p>4th.Single<br>五月雨よ</p>
   </li>
   <li class="image-music">
-     <a href="https://www.youtube.com/watch?v=drCopBcrxRM" target="_blank"><img src="nagaredama.jpg"></a>
+     <a href="https://www.youtube.com/watch?v=drCopBcrxRM" target="_blank"><img src="images/nagaredama.jpg"></a>
      <p>3rd.Single<br>流れ弾</p>
   </li>
   <li class="image-music">
-     <a href="https://www.youtube.com/watch?v=fPZ37t3nvco" target="_blank"><img src="ban.jpg"></a>
+     <a href="https://www.youtube.com/watch?v=fPZ37t3nvco" target="_blank"><img src="images/ban.jpg"></a>
      <p>2nd.Single<br>BAN</p>
   </li>
   <li class="image-music">
-     <a href="https://www.youtube.com/watch?v=fagRTasDcKo" target="_blank"><img src="nobafo.jpg"></a>
+     <a href="https://www.youtube.com/watch?v=fagRTasDcKo" target="_blank"><img src="images/nobafo.jpg"></a>
      <p>1st.Single<br>Nobody's fault</p>
   </li>
 </ul>
@@ -82,7 +82,7 @@
   <hr color="purple">
   <p class="live">ライブ</p>
    <div class="live-image">
-     <img src="live_1stAniv.jpg" width="720px" height="400px" style="margin: 0 0 0 30px;">
+     <img src="images/live_1stAniv.jpg" width="720px" height="400px" style="margin: 0 0 0 30px;">
    </div>
    <p class="live-font">
      <bold><font size = 5px>■1st Anniversary Live</font></bold><br><br><br>
@@ -100,19 +100,91 @@
   <p>櫻坂46 二期生</p>
   <hr color="orange">
   <div class="memberprof">
-    <img src="inori.jpg" style="margin: 0 2% 5% 0;">
-    <img src="endo.jpg" style="margin: 0 2% 5% 0;">
-    <img src="zono.jpg" style="margin: 0 2% 5% 0;">
-    <img src="onuma.jpg" style="margin: 0 2% 5% 0;">
-    <img src="kosaka.jpg" style="margin: 0 2% 5% 0;">
-    <img src="takemoto.jpg" style="margin: 0 2% 5% 0;">
-    <img src="hono.jpg" style="margin: 0 2% 5% 0;">
-    <img src="karin.jpg" style="margin: 0 2% 5% 0;">
-    <img src="masumoto.jpg" style="margin: 0 2% 5% 0;">
-    <img src="matuda.jpg" style="margin: 0 2% 5% 0;">
-    <img src="morita.jpg" style="margin: 0 2% 5% 0;">
-    <img src="rena.jpg" style="margin: 0 2% 5% 0;">
-    <img src="ten.jpg" style="margin: 0 2% 5% 0;">
+    <img src="images/ten.jpg" style="margin: 0 2% 5% 0;">
+    <table border="0">
+      <tr>
+        <td>
+         <img src="images/endo.jpg" style="margin: 2px 14px;">
+         <p><div style="margin-left: 8px;">
+           &nbsp;遠藤 光莉
+          <br>&nbsp;えんどう ひかり
+          </div>
+         </p>
+        </td>
+        <td>
+          <img src="images/zono.jpg" style="margin: 2px 14px;">
+          <p><div style="margin-left: 8px;">
+           &nbsp;大園 玲
+          <br>&nbsp;おおぞの れい
+          </div>
+          </p>
+        </td>
+        <td>
+          <img src="images/onuma.jpg" style="margin: 8px 14px;">
+          <p>&nbsp;大沼 晶保
+            <br>&nbsp;おおぬま あきほ
+          </p>
+        </td>
+        <td>
+          <img src="images/kosaka.jpg" style="margin: 8px 14px;">
+          <p>&nbsp;幸阪 茉里乃
+            <br>&nbsp;こうさか まりの
+          </p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <img src="images/takemoto.jpg" style="margin: 8px 8px;">
+          <p>&nbsp;武元 唯衣
+            <br>&nbsp;たけもと ゆい
+          </p>
+        </td>
+        <td>
+          <img src="images/hono.jpg" style="margin: 8px 8px;">
+          <p>&nbsp;田村 保乃
+            <br>&nbsp;たむら ほの
+          </p>
+        </td>
+        <td>
+          <img src="images/karin.jpg" style="margin: 8px 8px;">
+          <p>&nbsp;藤吉 夏鈴
+            <br>&nbsp;ふじよし かりん
+          </p>
+        </td>
+        <td>
+          <img src="images/masumoto.jpg" style="margin: 8px 8px;">
+          <p>&nbsp;増本 綺良
+            <br>&nbsp;ますもと きら
+          </p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <img src="images/matuda.jpg" style="margin: 8px 8px;">
+          <p>&nbsp;松田 里奈
+            <br>&nbsp;まつだ りな
+          </p>
+        </td>
+        <td>
+          <img src="images/morita.jpg" style="margin: 8px 8px;">
+          <p>&nbsp;森田 ひかる
+            <br>&nbsp;もりた ひかる
+          </p>
+        </td>
+        <td>
+          <img src="images/rena.jpg" style="margin: 8px 8px;">
+          <p>&nbsp;守屋 麗奈
+            <br>&nbsp;もりや れな
+          </p>
+        </td>
+        <td>
+          <img src="images/ten.jpg" style="margin: 8px 8px;">
+          <p>&nbsp;山﨑 天
+            <br>&nbsp;やまさき てん
+          </p>
+        </td>
+     </tr>
+    </table>
   </div>
   <p>櫻坂三期生</p>
   <hr color="orange">
@@ -120,7 +192,7 @@
     <table border="0">
       <tr>
         <td>
-         <img src="rika.jpg" style="margin: 2px 14px;">
+         <img src="images/rika.jpg" style="margin: 2px 14px;">
          <p><div style="margin-left: 8px;">
            &nbsp;石森 璃花
           <br>&nbsp;いしもり りか
@@ -128,7 +200,7 @@
          </p>
         </td>
         <td>
-          <img src="enriko.jpg" style="margin: 2px 14px;">
+          <img src="images/enriko.jpg" style="margin: 2px 14px;">
           <p><div style="margin-left: 8px;">
            &nbsp;遠藤 理子
           <br>&nbsp;えんどう りこ
@@ -136,13 +208,13 @@
           </p>
         </td>
         <td>
-          <img src="odakura.jpg" style="margin: 8px 14px;">
+          <img src="images/odakura.jpg" style="margin: 8px 14px;">
           <p>&nbsp;小田倉 麗奈
             <br>&nbsp;おだくら れいな
           </p>
         </td>
         <td>
-          <img src="konnagi.jpg" style="margin: 8px 14px;">
+          <img src="images/konnagi.jpg" style="margin: 8px 14px;">
           <p>&nbsp;小島 凪紗
             <br>&nbsp;こじま なぎさ
           </p>
@@ -150,25 +222,25 @@
       </tr>
       <tr>
         <td>
-          <img src="airi.jpg" style="margin: 8px 8px;">
+          <img src="images/airi.jpg" style="margin: 8px 8px;">
           <p>&nbsp;谷口 愛李
             <br>&nbsp;たにぐち あいり
           </p>
         </td>
         <td>
-          <img src="yudu.jpg" style="margin: 8px 8px;">
+          <img src="images/yudu.jpg" style="margin: 8px 8px;">
           <p>&nbsp;中嶋 優月
             <br>&nbsp;なかしま ゆづき
           </p>
         </td>
         <td>
-          <img src="matono.jpg" style="margin: 8px 8px;">
+          <img src="images/matono.jpg" style="margin: 8px 8px;">
           <p>&nbsp;的野 美青
             <br>&nbsp;まとの みお
           </p>
         </td>
         <td>
-          <img src="itoha.jpg" style="margin: 8px 8px;">
+          <img src="images/itoha.jpg" style="margin: 8px 8px;">
           <p>&nbsp;向井 純葉
             <br>&nbsp;むかい いとは
           </p>
@@ -176,19 +248,19 @@
       </tr>
       <tr>
         <td>
-          <img src="muraiyu.jpg" style="margin: 8px 8px;">
+          <img src="images/muraiyu.jpg" style="margin: 8px 8px;">
           <p>&nbsp;村井 優
             <br>&nbsp;むらい ゆう
           </p>
         </td>
         <td>
-          <img src="murayama.jpg" style="margin: 8px 8px;">
+          <img src="images/murayama.jpg" style="margin: 8px 8px;">
           <p>&nbsp;村山 美羽
             <br>&nbsp;むらやま みう
           </p>
         </td>
         <td>
-          <img src="sizuki.jpg" style="margin: 8px 8px;">
+          <img src="images/sizuki.jpg" style="margin: 8px 8px;">
           <p>&nbsp;山下 瞳月
             <br>&nbsp;やました しづき
           </p>
