--- a/index.html
+++ b/index.html
@@ -31,47 +31,59 @@
   </p>
   <ul>
   <li class="image-music">
-      <a href="https://www.youtube.com/watch?v=qP52sh7PzYA" target="_blank"><img src="images/UDAGAWA.jpg"></a>
+      <a href="https://www.youtube.com/watch?v=Rk54JNn7Qw4" target="_blank"><img src="images/mv_photo/The_growing_up_train.jpg"></a>
+      <p>14th.Single<br>The growing up train</p>
+  </li>
+  <li class="image-music">
+      <a href="https://www.youtube.com/watch?v=hBfDlIN0WtI" target="_blank"><img src="images/mv_photo/Unhappy_birthday.jpg"></a>
+      <p>13th.Single<br>Unhappy birthday構文</p>
+  </li>
+  <li class="image-music">
+      <a href="https://www.youtube.com/watch?v=nTxTTZ0QLrI" target="_blank"><img src="images/mv_photo/make_or_break.jpg"></a>
+      <p>12th.Single<br>Make or Break</p>
+  </li>
+  <li class="image-music">
+      <a href="https://www.youtube.com/watch?v=qP52sh7PzYA" target="_blank"><img src="images/mv_photo/UDAGAWA.jpg"></a>
       <p>11th.Single<br>UDAGWA GENERATION</p>
   </li>
   <li class="image-music">
-     <a href="https://www.youtube.com/watch?v=07JLD3d1-W0" target="_blank"><img src="images/I_want.jpg"></a>
+     <a href="https://www.youtube.com/watch?v=07JLD3d1-W0" target="_blank"><img src="images/mv_photo/I_want.jpg"></a>
      <p>10th.Single<br>I want tomorrow to come</p>
   </li>
   <li class="image-music">
-     <a href="https://www.youtube.com/watch?v=Rs-Y9MtHsoo" target="_blank"><img src="images/zigouzitoku.jpg"></a>
+     <a href="https://www.youtube.com/watch?v=Rs-Y9MtHsoo" target="_blank"><img src="images/mv_photo/zigouzitoku.jpg"></a>
      <p>9th.Single<br>自業自得</p>
   </li>
   <li class="image-music">
-     <a href="https://www.youtube.com/watch?v=7xx66mR_HeE" target="_blank"><img src="images/ikumodo.jpg"></a>
+     <a href="https://www.youtube.com/watch?v=7xx66mR_HeE" target="_blank"><img src="images/mv_photo/ikumodo.jpg"></a>
      <p>8th.Single<br>何歳の頃に戻りたいのか</p>
   </li>
   <li class="image-music">
-     <a href="https://www.youtube.com/watch?v=x_BjvhMW9TE" target="_blank"><img src="images/syonin.jpg"></a>
+     <a href="https://www.youtube.com/watch?v=x_BjvhMW9TE" target="_blank"><img src="images/mv_photo/syonin.jpg"></a>
      <p>7th.Single<br>承認欲求</p>
   </li>
   <li class="image-music">
-     <a href="https://www.youtube.com/watch?v=YJRFD1AdaUE" target="_blank"><img src="images/startover.jpg"></a>
+     <a href="https://www.youtube.com/watch?v=YJRFD1AdaUE" target="_blank"><img src="images/mv_photo/startover.jpg"></a>
      <p>6th.Single<br>Start Over!</p>
   </li>
   <li class="image-music">
-     <a href="https://www.youtube.com/watch?v=zKLgrxHDgls" target="_blank"><img src="images/sakuraduki.jpg"></a>
+     <a href="https://www.youtube.com/watch?v=zKLgrxHDgls" target="_blank"><img src="images/mv_photo/sakuraduki.jpg"></a>
      <p>5th.Single<br>桜月</p>
   </li>
   <li class="image-music">
-     <a href="https://www.youtube.com/watch?v=3boaeE3dwMs" target="_blank"><img src="images/samidare.jpg"></a>
+     <a href="https://www.youtube.com/watch?v=3boaeE3dwMs" target="_blank"><img src="images/mv_photo/samidare.jpg"></a>
      <p>4th.Single<br>五月雨よ</p>
   </li>
   <li class="image-music">
-     <a href="https://www.youtube.com/watch?v=drCopBcrxRM" target="_blank"><img src="images/nagaredama.jpg"></a>
+     <a href="https://www.youtube.com/watch?v=drCopBcrxRM" target="_blank"><img src="images/mv_photo/nagaredama.jpg"></a>
      <p>3rd.Single<br>流れ弾</p>
   </li>
   <li class="image-music">
-     <a href="https://www.youtube.com/watch?v=fPZ37t3nvco" target="_blank"><img src="images/ban.jpg"></a>
+     <a href="https://www.youtube.com/watch?v=fPZ37t3nvco" target="_blank"><img src="images/mv_photo/ban.jpg"></a>
      <p>2nd.Single<br>BAN</p>
   </li>
   <li class="image-music">
-     <a href="https://www.youtube.com/watch?v=fagRTasDcKo" target="_blank"><img src="images/nobafo.jpg"></a>
+     <a href="https://www.youtube.com/watch?v=fagRTasDcKo" target="_blank"><img src="images/mv_photo/nobafo.jpg"></a>
      <p>1st.Single<br>Nobody's fault</p>
   </li>
 </ul>
@@ -80,21 +92,77 @@
 </style>
 
   <hr color="purple">
-  <p class="live">ライブ</p>
-   <div class="live-image">
-     <img src="images/live_1stAniv.jpg" width="720px" height="400px" style="margin: 0 0 0 30px;">
-   </div>
-   <p class="live-font">
-     <bold><font size = 5px>■1st Anniversary Live</font></bold><br><br><br>
-     <br>2021年12月9日・10日の2日間にわたって日本武道館で開催された1周年記念ライブ。
-     <br>
-     <br>「櫻坂46」改名後はコロナ渦であったため無観客でライブが行われ、ファンは配信のみで直接応援することができなかった。
-     <br>
-     <br>そのような中でも最大限活動を続け遂に1周年を迎えたこのタイミングで開催された「1st Anniversary Live」
-     <br>
-     <br>1期生として欅坂46の結成時から活躍し、同年12月19日を最後にグループから卒業する守屋茜、渡辺梨加にとってはこの公演がラストライブとなった。
-   </p>
+<p class="live">ライブ</p>
+<br>
+<div class="live-3d-wrapper">
+  <div class="live-3d-box" id="liveBox">
 
+    <!-- 1ページ目 -->
+    <div class="live-face face1">
+      <div class="live-content">
+        <img src="images/live_photo/live_1stAniv.jpg" alt="">
+        <div class="live-text">
+          <h2>■1st Anniversary Live</h2>
+          <p>
+            2021年12月9日・10日の2日間にわたって日本武道館で開催された1周年記念ライブ。<br><br>
+            「櫻坂46」改名後はコロナ渦であったため無観客でライブが行われ、ファンは配信のみで直接応援することができなかった。<br><br>
+            そのような中でも最大限活動を続け遂に1周年を迎えたこのタイミングで開催された「1st Anniversary Live」。<br><br>
+            1期生として欅坂46の結成時から活躍し、同年12月19日を最後にグループから卒業する守屋茜、渡辺梨加にとってはこの公演がラストライブとなった。
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- 2ページ目 -->
+    <div class="live-face face2">
+      <div class="live-content">
+        <img src="images/live_photo/live_2ndAniv.png" alt="">
+        <div class="live-text">
+          <h2>■2nd YEAR ANNIVERSARY ～Buddies感謝祭～</h2>
+          <p>
+            2022年12月8日・9日の2日間にわたり、日本武道館にて開催された2周年記念ライブ。<br><br>
+            改名から2周年という節目にあたる本公演は、グループのこれまでの歩みと現在地、そして今後への展望を示す重要なライブとなった。<br><br>
+            コロナ渦を抜け、困難な状況の中で活動を続け、着実に進化してきたグループが、ファンへの感謝と共に次なるステージへ向かう決意を表明する場となった点において、2周年記念ライブは大きな意味を持つライブであった。
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- 3ページ目 -->
+    <div class="live-face face3">
+      <div class="live-content">
+        <img src="images/live_photo/live_3rdAniv.jpg" alt="">
+        <div class="live-text">
+          <h2>■3rd YEAR ANNIVERSARY LIVE</h2>
+          <p>
+            2023年11月25日・26日の2日間にわたってzozoマリンスタジアムで開催された3周年記念ライブ。<br><br>
+            グループとして初のスタジアム規模での周年公演となり、改名から3年を経て到達した新たなステージを象徴するライブ。<br><br>
+            野外スタジアムという開放的な空間での開催は、これまでの武道館公演とは大きく異なるスケール感を持ち、会場全体を包み込むペンライトの光景は圧巻であった。<br><br>
+            声出しも段階的に解禁され始めた時期であり、ファンの歓声とともに作り上げられる空間は、コロナ禍を経た櫻坂46にとって新たな景色であった。
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- 4ページ目 -->
+    <div class="live-face face4">
+      <div class="live-content">
+        <img src="images/live_photo/live_4thAniv.jpg" alt="">
+        <div class="live-text">
+          <h2>■4th YEAR ANNIVERSARY LIVE</h2>
+          <p>
+            2024年11月23日・24日の2日間にわたり、京セラドーム大阪にて開催された4周年記念ライブ。<br><br>
+            前年のスタジアム公演を経て実現したドームライブは、スケール・演出ともにさらに進化。<br><br>
+            360度を埋め尽くす観客席と一体化する演出構成により、会場全体が一つの空間として機能していた。<br><br>
+            声援が完全に戻った環境の中での周年公演は、コロナ禍を乗り越えた櫻坂46にとって、真の意味で“通常のライブ”を取り戻した瞬間でもあった。
+          </p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+<br>
   <p class="p-member">メンバー紹介</p>
   <p class="p-name">
   <p>櫻坂46 二期生</p>
@@ -103,7 +171,8 @@
     <table border="0">
       <tr>
         <td>
-         <img src="images/endo.jpg" style="margin: 2px 14px;">
+          <a href="member_page/endo_hikari.html">
+          <img src="images/member_photo/endo.jpg" style="margin: 2px 14px;">
          <p><div style="margin-left: 8px;">
            &nbsp;遠藤 光莉
           <br>&nbsp;えんどう ひかり
@@ -111,7 +180,8 @@
          </p>
         </td>
         <td>
-          <img src="images/zono.jpg" style="margin: 2px 14px;">
+          <a href="member_page/ozo_rei.html">
+          <img src="images/member_photo/zono.jpg" style="margin: 2px 14px;">
           <p><div style="margin-left: 8px;">
            &nbsp;大園 玲
           <br>&nbsp;おおぞの れい
@@ -119,13 +189,13 @@
           </p>
         </td>
         <td>
-          <img src="images/onuma.jpg" style="margin: 8px 14px;">
+          <img src="images/member_photo/onuma.jpg" style="margin: 8px 14px;">
           <p>&nbsp;大沼 晶保
             <br>&nbsp;おおぬま あきほ
           </p>
         </td>
         <td>
-          <img src="images/kosaka.jpg" style="margin: 8px 14px;">
+          <img src="images/member_photo/kosaka.jpg" style="margin: 8px 14px;">
           <p>&nbsp;幸阪 茉里乃
             <br>&nbsp;こうさか まりの
           </p>
@@ -133,25 +203,25 @@
       </tr>
       <tr>
         <td>
-          <img src="images/takemoto.jpg" style="margin: 8px 8px;">
+          <img src="images/member_photo/takemoto.jpg" style="margin: 8px 8px;">
           <p>&nbsp;武元 唯衣
             <br>&nbsp;たけもと ゆい
           </p>
         </td>
         <td>
-          <img src="images/hono.jpg" style="margin: 8px 8px;">
+          <img src="images/member_photo/hono.jpg" style="margin: 8px 8px;">
           <p>&nbsp;田村 保乃
             <br>&nbsp;たむら ほの
           </p>
         </td>
         <td>
-          <img src="images/karin.jpg" style="margin: 8px 8px;">
+          <img src="images/member_photo/karin.jpg" style="margin: 8px 8px;">
           <p>&nbsp;藤吉 夏鈴
             <br>&nbsp;ふじよし かりん
           </p>
         </td>
         <td>
-          <img src="images/masumoto.jpg" style="margin: 8px 8px;">
+          <img src="images/member_photo/masumoto.jpg" style="margin: 8px 8px;">
           <p>&nbsp;増本 綺良
             <br>&nbsp;ますもと きら
           </p>
@@ -159,25 +229,25 @@
       </tr>
       <tr>
         <td>
-          <img src="images/matuda.jpg" style="margin: 8px 8px;">
+          <img src="images/member_photo/matuda.jpg" style="margin: 8px 8px;">
           <p>&nbsp;松田 里奈
             <br>&nbsp;まつだ りな
           </p>
         </td>
         <td>
-          <img src="images/morita.jpg" style="margin: 8px 8px;">
+          <img src="images/member_photo/morita.jpg" style="margin: 8px 8px;">
           <p>&nbsp;森田 ひかる
             <br>&nbsp;もりた ひかる
           </p>
         </td>
         <td>
-          <img src="images/rena.jpg" style="margin: 8px 8px;">
+          <img src="images/member_photo/rena.jpg" style="margin: 8px 8px;">
           <p>&nbsp;守屋 麗奈
             <br>&nbsp;もりや れな
           </p>
         </td>
         <td>
-          <img src="images/ten.jpg" style="margin: 8px 8px;">
+          <img src="images/member_photo/ten.jpg" style="margin: 8px 8px;">
           <p>&nbsp;山﨑 天
             <br>&nbsp;やまさき てん
           </p>
@@ -191,7 +261,7 @@
     <table border="0">
       <tr>
         <td>
-         <img src="images/rika.jpg" style="margin: 2px 14px;">
+         <img src="images/member_photo/rika.jpg" style="margin: 2px 14px;">
          <p><div style="margin-left: 8px;">
            &nbsp;石森 璃花
           <br>&nbsp;いしもり りか
@@ -199,7 +269,7 @@
          </p>
         </td>
         <td>
-          <img src="images/enriko.jpg" style="margin: 2px 14px;">
+          <img src="images/member_photo/enriko.jpg" style="margin: 2px 14px;">
           <p><div style="margin-left: 8px;">
            &nbsp;遠藤 理子
           <br>&nbsp;えんどう りこ
@@ -207,13 +277,13 @@
           </p>
         </td>
         <td>
-          <img src="images/odakura.jpg" style="margin: 8px 14px;">
+          <img src="images/member_photo/odakura.jpg" style="margin: 8px 14px;">
           <p>&nbsp;小田倉 麗奈
             <br>&nbsp;おだくら れいな
           </p>
         </td>
         <td>
-          <img src="images/konnagi.jpg" style="margin: 8px 14px;">
+          <img src="images/member_photo/konnagi.jpg" style="margin: 8px 14px;">
           <p>&nbsp;小島 凪紗
             <br>&nbsp;こじま なぎさ
           </p>
@@ -221,25 +291,25 @@
       </tr>
       <tr>
         <td>
-          <img src="images/airi.jpg" style="margin: 8px 8px;">
+          <img src="images/member_photo/airi.jpg" style="margin: 8px 8px;">
           <p>&nbsp;谷口 愛李
             <br>&nbsp;たにぐち あいり
           </p>
         </td>
         <td>
-          <img src="images/yudu.jpg" style="margin: 8px 8px;">
+          <img src="images/member_photo/yudu.jpg" style="margin: 8px 8px;">
           <p>&nbsp;中嶋 優月
             <br>&nbsp;なかしま ゆづき
           </p>
         </td>
         <td>
-          <img src="images/matono.jpg" style="margin: 8px 8px;">
+          <img src="images/member_photo/matono.jpg" style="margin: 8px 8px;">
           <p>&nbsp;的野 美青
             <br>&nbsp;まとの みお
           </p>
         </td>
         <td>
-          <img src="images/itoha.jpg" style="margin: 8px 8px;">
+          <img src="images/member_photo/itoha.jpg" style="margin: 8px 8px;">
           <p>&nbsp;向井 純葉
             <br>&nbsp;むかい いとは
           </p>
@@ -247,19 +317,19 @@
       </tr>
       <tr>
         <td>
-          <img src="images/muraiyu.jpg" style="margin: 8px 8px;">
+          <img src="images/member_photo/muraiyu.jpg" style="margin: 8px 8px;">
           <p>&nbsp;村井 優
             <br>&nbsp;むらい ゆう
           </p>
         </td>
         <td>
-          <img src="images/murayama.jpg" style="margin: 8px 8px;">
+          <img src="images/member_photo/murayama.jpg" style="margin: 8px 8px;">
           <p>&nbsp;村山 美羽
             <br>&nbsp;むらやま みう
           </p>
         </td>
         <td>
-          <img src="images/sizuki.jpg" style="margin: 8px 8px;">
+          <img src="images/member_photo/sizuki.jpg" style="margin: 8px 8px;">
           <p>&nbsp;山下 瞳月
             <br>&nbsp;やました しづき
           </p>
@@ -280,3 +350,27 @@
 </tr>
 
 </html>
+
+<script>
+let angle = 0;
+const box = document.querySelector('.live-3d-box');
+
+// ▼ 自動回転（3秒ごと）
+let autoRotate = setInterval(() => {
+  angle -= 90;
+  box.style.transform = `rotateY(${angle}deg)`;
+}, 3000);
+
+// ▼ クリックしたら即回転
+box.addEventListener('click', () => {
+  angle -= 90;
+  box.style.transform = `rotateY(${angle}deg)`;
+
+  // クリックしたら自動回転をリセット（止まらないように）
+  clearInterval(autoRotate);
+  autoRotate = setInterval(() => {
+    angle -= 90;
+    box.style.transform = `rotateY(${angle}deg)`;
+  }, 3000);
+});
+</script>
