--- a/index.html
+++ b/index.html
@@ -105,9 +105,10 @@
           <h2>■1st Anniversary Live</h2>
           <p>
             2021年12月9日・10日の2日間にわたって日本武道館で開催された1周年記念ライブ。<br><br>
-            「櫻坂46」改名後はコロナ渦であったため無観客でライブが行われ、ファンは配信のみで直接応援することができなかった。<br><br>
+            「櫻坂46」改名後の活動はコロナ禍の影響を受け、無観客配信が中心となった中で迎えた節目の公演であった。<br><br>
             そのような中でも最大限活動を続け遂に1周年を迎えたこのタイミングで開催された「1st Anniversary Live」。<br><br>
-            1期生として欅坂46の結成時から活躍し、同年12月19日を最後にグループから卒業する守屋茜、渡辺梨加にとってはこの公演がラストライブとなった。
+            ステージに込められた覚悟と緊張感は強く、改名後の櫻坂46としての存在意義を示すライブとなり、デビュー曲から当時の最新楽曲までを披露し、再出発からの歩みを静かに、そして力強く刻んだ。<br><br>
+            また、本公演は1期生・守屋茜、渡辺梨加にとって最後のライブでもあり、グループの歴史と未来が交差する特別な2日間となった。
           </p>
         </div>
       </div>
@@ -116,13 +117,14 @@
     <!-- 2ページ目 -->
     <div class="live-face face2">
       <div class="live-content">
-        <img src="images/live_photo/live_2ndAniv.png" alt="">
+        <img src="images/live_photo/live_2ndAniv.jpg" alt="">
         <div class="live-text">
           <h2>■2nd YEAR ANNIVERSARY ～Buddies感謝祭～</h2>
           <p>
             2022年12月8日・9日の2日間にわたり、日本武道館にて開催された2周年記念ライブ。<br><br>
             改名から2周年という節目にあたる本公演は、グループのこれまでの歩みと現在地、そして今後への展望を示す重要なライブとなった。<br><br>
-            コロナ渦を抜け、困難な状況の中で活動を続け、着実に進化してきたグループが、ファンへの感謝と共に次なるステージへ向かう決意を表明する場となった点において、2周年記念ライブは大きな意味を持つライブであった。
+            コロナ渦を抜け、困難な状況の中で活動を続け、着実に進化してきたグループが、ファンへの感謝と共に次なるステージへ向かう決意を表明する場となった点において、2周年記念ライブは大きな意味を持つライブであった。<br><br>
+            声出しこそ制限はあったものの、会場を埋め尽くすペンライトと拍手がステージを包み込み、メンバーとファンが確かに繋がっていることを実感できる空間が広がり、2年間で磨かれた表現力とグループの一体感が際立ち、櫻坂46が確実に進化していることを証明したライブであった。
           </p>
         </div>
       </div>
@@ -136,9 +138,10 @@
           <h2>■3rd YEAR ANNIVERSARY LIVE</h2>
           <p>
             2023年11月25日・26日の2日間にわたってzozoマリンスタジアムで開催された3周年記念ライブ。<br><br>
-            グループとして初のスタジアム規模での周年公演となり、改名から3年を経て到達した新たなステージを象徴するライブ。<br><br>
+            グループとして初のスタジアム規模での周年ライブとなり、改名から3年を経て到達した新たなステージを象徴するライブだった。<br><br>
             野外スタジアムという開放的な空間での開催は、これまでの武道館公演とは大きく異なるスケール感を持ち、会場全体を包み込むペンライトの光景は圧巻であった。<br><br>
-            声出しも段階的に解禁され始めた時期であり、ファンの歓声とともに作り上げられる空間は、コロナ禍を経た櫻坂46にとって新たな景色であった。
+            声出しも段階的に解禁され始めた時期であり、ファンの歓声とともに作り上げられる空間は、コロナ禍を経た櫻坂46にとって新たな景色であった。<br><br>
+            スケールの拡大に比例するようにパフォーマンスも一層洗練され、櫻坂46が次のステージへ進んだことを強く印象付ける2日間となった。
           </p>
         </div>
       </div>
@@ -152,9 +155,10 @@
           <h2>■4th YEAR ANNIVERSARY LIVE</h2>
           <p>
             2024年11月23日・24日の2日間にわたり、京セラドーム大阪にて開催された4周年記念ライブ。<br><br>
-            前年のスタジアム公演を経て実現したドームライブは、スケール・演出ともにさらに進化。<br><br>
+            前年のスタジアム公演を経て実現したドームライブは、スケール・演出ともにさらに進化し、グループの成熟と自信を象徴する内容となった。<br><br>
             360度を埋め尽くす観客席と一体化する演出構成により、会場全体が一つの空間として機能していた。<br><br>
-            声援が完全に戻った環境の中での周年公演は、コロナ禍を乗り越えた櫻坂46にとって、真の意味で“通常のライブ”を取り戻した瞬間でもあった。
+            圧倒的なスケール感の中でも揺るがないパフォーマンスと世界観は、4年間で築き上げてきた櫻坂46の強さそのもの。会場を包み込む歓声と光は、ここまで歩んできた時間の重みを物語っていた。<br><br>
+            4周年ライブは、これまでの集大成であると同時に、さらなる未来へ踏み出す決意を示す公演であった。
           </p>
         </div>
       </div>
